Simplify CSS and fix layout issues

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -4,8 +4,6 @@
 	$pagecontrolpanelWidth: 269px;
 	$always_on_top: 60;
 
-	$highlighted-menuitem-background: $selected-menuitem-background;
-
 	$mowsubmenu-transition: bottom 0.2s cubic-bezier(0.4, 0, 1, 1);
 	$pagecontrol-transition: right 0.25s cubic-bezier(0.4, 0, 1, 1);
 	$floatingbtn-hover-transition: background-color 0.15s;
@@ -497,30 +495,6 @@
 		width: calc(100% - 56px);
 		list-style: none;
 		margin: 6px 0 6px auto;
-	}
-
-	.materialContextSubMenu {
-		background-color: $white;
-		padding-top: 4px;
-		padding-bottom: 4px;
-		scrollbar-width: thin;
-		overflow-y: auto;
-
-		// max height is viewport height - header height
-		max-height: calc(100vh - 48px);
-
-		.listMenuItem {
-			padding: 4px 16px 0 16px;
-			height: 32px;
-			border-radius: 2px;
-			line-height: 24px;
-			cursor: pointer;
-			white-space: nowrap;
-		}
-
-		.highlighted {
-			background-color: $highlighted-menuitem-background;
-		}
 	}
 
 	.inlineTextToolbar {
